--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -1,4 +1,11 @@
 \begin{thebibliography}{9}
+
+\bibitem{aolDataLeak}
+\url{https://www.nytimes.com/2006/08/09/technology/09aol.html}
+
+\bibitem{myspacebreach}
+\url{https://www.welivesecurity.com/2016/06/01/myspace-data-breach-360-million-accounts-affected/}
+
 \bibitem{looseTweets} 
 Huina Mao, Xin Shuaiand Apu Kapadia.\newline
 \textit{Loose Tweets: An Analysis of Privacy Leaks on Twitter}. \newline
@@ -208,5 +215,6 @@ Yuhao Yang et al.\newline
 \textit{Stalking online: on user privacy in social networks}.\newline
 In: Proceedings of the second ACM conference on Data and Application Security and Privacy. 2012, pp. 37–48.
 
-
+\bibitem{sentiment140}
+https://www.kaggle.com/kazanova/sentiment140
 \end{thebibliography}
