--- a/Capitolo3.tex
+++ b/Capitolo3.tex
@@ -1,1 +1,14 @@
-Qui ci va quell'articolo che abbiamo trovato su PET passo passo illustrato, e sottolineato i pregi/difetti.
+Al fine di tutelare i dati che gli utenti condividono con il loro passaggio online il 25 maggio del 2018 è entrata in vigore la normativa europea sulla protezione dei dati personali meglio nota come regolamento GDPR.\footnote{\url{https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016R0679&from=EN\#d1e40-1-1}}
+Questa normativa limita il commercio dei dati ma di certo non impedisce agli utenti di pubblicare su un OSN informazioni sensibili in maniera volontaria o involontaria su se stesso o, peggio ancora, su altri. A tal proposito Mao et al. \cite{looseTweets} hanno condotto uno studio quantitativo su Twitter, lo studio ha rivelato che nei tweet sono presenti molti dati personali non solo riguardanti l'autore del tweet ma anche di terzi. In seguito Aylin et al.\cite{privacyDetective} hanno cercato di capire quanto siano sensibili le informazioni contenute nei tweet attribuendo a questi un \textbf{privacy score}, esso poteva essere di tre tipi:
+\begin{enumerate}
+    \item il tweet non contiene informazioni private
+    \item il tweet può contenere informazioni private
+    \item il tweet contiene informazioni private
+\end{enumerate}
+Questo studio si è concluso con il 10.37\% dei tweet collezionati ha un privacy score di tipo 1, il 21.11\% di tipo e il restante 68.52\% è di tipo 3.
+Infine Qiaozhi et al. \cite{dontTweetThis} hanno cercato di fornire un' ulteriore misura della sensibilità presente nei vari tweet raccolti, le misure che hanno fornito sono i \textbf{privscore} essi si dividono in tre categorie
+\begin{enumerate}
+    \item liberi da contesto, un tweet che contiene un dato sensibile
+    \item consapevoli del contesto, a seconda del contesto scritto nel tweet un dato può essere sensibile o meno
+    \item personalizzati, a seconda della cronologia dei tweet fatti da un utente un dato può essere sensibile o meno
+\end{enumerate}
