--- a/indice.tex
+++ b/indice.tex
@@ -18,6 +18,7 @@
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
 \newcommand{\quotes}[1]{``#1''}
+\usepackage[font=small,labelfont=bf]{caption}
 
 %rimuove bordi dai link
 \hypersetup{
@@ -124,8 +125,12 @@
 \chapter{Metodologia}
 \input{Capitolo4.tex}
 
-\chapter{Knoxly}
-\input{Capitolo5.tex}
+
+\input{capitolo5.tex}
+
+\input{Capitolo6.tex}
+
+\input{Capitolo7.tex}
 
 \chapter*{Appendice}
 \setlength{\headheight}{17pt}
