--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -5,11 +5,22 @@
 
 \bibitem{myspacebreach}
 \url{https://www.welivesecurity.com/2016/06/01/myspace-data-breach-360-million-accounts-affected/}
+\bibitem{cambridge}
+\url{https://it.wikipedia.org/wiki/Scandalo_Facebook-Cambridge_Analytica}
+
+\bibitem{formigli}
+\url{https://www.la7.it/piazzapulita/video/la-mia-casa-postata-online-alcune-considerazioni-leditoriale-di-corrado-formigli-12-12-2019-298369}
+
+\bibitem{MalandrinoScarano}
+Delfina Malandrino e Vittorio Scarano
+\textit{Privacy leakage on the Web: Diffusion and countermeasures}\newline
+Computer Networks 57.14, 2013
 
 \bibitem{looseTweets} 
 Huina Mao, Xin Shuaiand Apu Kapadia.\newline
 \textit{Loose Tweets: An Analysis of Privacy Leaks on Twitter}. \newline
 WPES 2011.
+
 
 \bibitem{privacyDetective}
 Aylin Caliskan, Jonathan Walsh, Rachel Greenstadt.\newline
