--- a/capitolo5.tex
+++ b/capitolo5.tex
@@ -48,9 +48,8 @@ L'invio della frase al server avviene tramite una chiamata {\tt AJAX} verso l'en
 
 La User Interface (UI) di Knoxly è stata progettata ed implementata per fornire privacy awareness in modo semplice ed intuitivo. Come anticipato in Sezione~\ref{sec:whoisKnoxly} Knoxly evidenzia contenuti sensibili e/o personali presenti in un testo scritto in italiano o in inglese tramite l'utilizzo di espressioni regolari e dizionari. Utilizziamo il \textit{giallo} per i quasi identifier~\cite{} e dati sensibili, il \textit{rosso} per i dati personali. 
 
-Cliccando sull'icona posta accanto alla barra dell'indirizzo su Google Chrome, viene visualizzato il popup di Knoxly. Accanto all'icona è possibile inoltre visualizzare un badge che riporta un contatore numerico (vedi Figura~\ref{}). Tale contatore è utilizzato per segnalare all'utente il numero di frasi scritte ritenut 
+Cliccando sull'icona posta accanto alla barra dell'indirizzo su Google Chrome, viene visualizzato il popup di Knoxly. Accanto all'icona è possibile inoltre visualizzare un badge che riporta un contatore numerico (vedi Figura~\ref{}). Tale contatore è utilizzato per segnalare all'utente il numero di frasi scritte classificate come minacce per la sua privacy, cioè sensibili. 
 
-Alla UI di Knoxly si accede cliccando sulla sua icona posizionata nella sezione di Google Chrome dedicata ai plug-in. Sull'icona di Knoxly possiamo trovare un badge che riporta il numero di frasi contenenti dati sensibili e/o personali individuate.
 \begin{figure}[h]
     \centering
     \includegraphics[scale=0.7]{Figure/ui/UI-Knoxly.png}
@@ -59,9 +58,20 @@ Alla UI di Knoxly si accede cliccando sulla sua icona posizionata nella sezione 
 \end{figure}
 \FloatBarrier
 
-In figura \ref{fig:uiKnoxly} viene mostrata la UI di Knoxly essa è composta da 3 sezioni la sezione \textbf{Analysis}è composta da una tabella da 3 colonne e mostra le frasi che Knoxly reputa sensibili, un badge che riporta una icona che fa riferimento al topic a cui appartiene la frase, il badge può essere colorato di giallo nel caso in cui la frase risulti sensibile(sensibilità positiva compresa fra 0.36 e 0.68) o di rosso nel caso in cui la frase abbia una sensibilità positiva maggiore o uguale a 0.68 e un bottone \textbf{feedback} che consente all'utente di inviare un feedback a Knoxly per far si che il tool non segnali più frasi simili a quella appena segnalata.
+In Figura~\ref{fig:uiKnoxly} viene mostrata la landing page una volta aperto il popup di Knoxly. La UI del popup è composta principalmente da tre sezioni/pagine:
+\begin{itemize}
+    \item \textbf{Analysis}: pagina dedicata alle segnalazioni del tool. La pagina fa anche da landing page;
+    \item \textbf{Statistics}: pagina dedicata alle misurazioni, utili a rendere l'utente consapevole di ciò che scrive e quanto;
+    \item \textbf{About}: pagina dedicata ad istruzioni sull'utilizzo di Knoxly.
+\end{itemize}
 
-La sezione \textbf{Statistics}(figura \ref{fig:statKnoxly} contiene un grafico a barre che riporta il numero di occorrenza di frasi sensibili nei vari topic. Sotto al grafico a barre è presenta la rappresentazione dell'\textbf{overall score} esso viene calcolato in base alla media aritmetica delle sensibilità delle frasi considerate sensibili da Knoxly. L'overall score viene rappresentato come un cerchio, esso si colora di rosso se l'overall score supera 0.68 altrimenti si colora di giallo. 
+\textbf{Analysis} è composta da una tabella con 3 colonne. Mostra le frasi che Knoxly reputa sensibili, indicando una icona facente riferimento al topic a cui appartiene la frase che può avere due colori: \textit{giallo} nel caso in cui la frase risulti sensibile (sensibilità positiva compresa fra $0.36$ e $0.68$) o \textit{rosso} nel caso in cui la frase abbia una sensibilità positiva maggiore o uguale a $0.68$. Inoltre viene mostrato anche il bottone \textbf{feedback} che consente all'utente di inviare un feedback a Knoxly per far si che il tool non segnali più come sensibili frasi simili a quella per cui si sta inviando il feedback.
+
+Le icone scelte per fornire consapevolezza sono mostrate in Figura~\ref{}. Sono stati utilizzati i colori \textit{rosso} e \textit{giallo} 
+
+La sezione \textbf{Statistics} (vedi Figura~\ref{fig:statKnoxly} è dedicata alle misurazioni: l'utente può visualizzare un grafico a barre che riporta il numero di occorrenze di frasi sensibili che lui ha divulgato in rete nei vari topic, politica, salute, viaggi, lavoro e general. Al di sotto del grafico a barre l'utente può visualizzare l'\textbf{overall score} della sensibilità dei contenuti che divulga in rete. L'overall score $s$ viene calcolato con il seguente algoritmo 
+
+L'overall score non è altro che il calcolo online della media degli score di sensibilità ottenuti per ciascuna delle frasi che ha divulgato, con riferimento alle sole frasi classificate sensibili. $s \in [0..1]$ e viene rappresentato come un cerchio che si colora di rosso se l'overall score supera 0.68 altrimenti è mostrato in giallo. 
 \begin{figure}[h]
     \centering
     \includegraphics[scale=0.7]{Figure/ui/statistics.png}
